# libtest

./: .clangd  Makefile  meson.build  readme.md
include/test/: test.h
src/: test.c  test.h
test/: main.c  meson.build  test_assert.c  test_check.c
